objects/LMS_ProductLine_Product_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Addons__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Addons</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LegacyId__c</fullName>
        <externalId>true</externalId>
        <label>LegacyId</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LicenseType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Types</label>
        <referenceTo>LMS_License_Types__c</referenceTo>
        <relationshipLabel>Product Line Products</relationshipLabel>
        <relationshipName>Product_Line_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Line</label>
        <referenceTo>LMS_ProductLine__c</referenceTo>
        <relationshipLabel>Product Line Products</relationshipLabel>
        <relationshipName>Product_Line_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Item__c</fullName>
        <formula>Product_Part__r.APN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Line Products</relationshipLabel>
        <relationshipName>ProductLineProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequireAddons__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Require Addons</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Line Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductLine__c</columns>
        <columns>Product_Part__c</columns>
        <columns>Product_Item__c</columns>
        <columns>Allow_Addons__c</columns>
        <columns>RequireAddons__c</columns>
        <columns>LicenseType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductLine__c</field>
            <operation>equals</operation>
            <value>CIC 4.0</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CIC</fullName>
        <columns>NAME</columns>
        <columns>ProductLine__c</columns>
        <columns>Product_Part__c</columns>
        <columns>Product_Item__c</columns>
        <columns>Allow_Addons__c</columns>
        <columns>RequireAddons__c</columns>
        <columns>LicenseType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductLine__c</field>
            <operation>startsWith</operation>
            <value>CIC</value>
        </filters>
        <label>CIC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SW_0123</fullName>
        <columns>NAME</columns>
        <columns>ProductLine__c</columns>
        <columns>Product_Part__c</columns>
        <columns>Product_Item__c</columns>
        <columns>Allow_Addons__c</columns>
        <columns>RequireAddons__c</columns>
        <columns>LicenseType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Item__c</field>
            <operation>contains</operation>
            <value>CS-012-SOCACD</value>
        </filters>
        <label>SW-001-4.0-DS01</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Jun-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Line Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>